objects/Answertostack__c.object
<CustomObject>
    <description>I2P 2015 Oct Release</description>
    <fields>
        <fullName>ComplaintRequest__c</fullName>
        <label>Complaint/Request</label>
        <referenceTo>ComplaintRequest__c</referenceTo>
        <relationshipLabel>Answer-to stack</relationshipLabel>
        <relationshipName>Answer_to_stack</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactEmailAccountableOrganization__c</fullName>
        <label>ContactEmailAccountableOrganization</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IssueOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Answer_to_stack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeepInvolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepInvolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Answer-to stack</relationshipLabel>
        <relationshipName>Answer_to_Stack</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_StackCounter__c</fullName>
        <label>TECH_StackCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer-to stack</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Answer-to stack</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer-to stack</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>